<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_launch_year"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_year"
        app:layout_constraintStart_toStartOf="@id/tv_year"
        android:inputType="number"
        android:maxLength="4"
        android:hint="1990"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_launch_status"
        app:layout_constraintTop_toBottomOf="@id/et_year"
        app:layout_constraintStart_toStartOf="@id/et_year"
        android:layout_marginTop="16dp"
        android:text="@string/launch_status"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <RadioGroup
        android:id="@+id/radioLaunchStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_status"
        app:layout_constraintStart_toStartOf="@id/tv_launch_status"
        android:layout_marginTop="8dp">
        <RadioButton
            android:id="@+id/btn_success_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/successful_launches" />
        <RadioButton
            android:id="@+id/btn_failed_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsuccessful_launches" />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sorting"
        app:layout_constraintTop_toBottomOf="@id/radioLaunchStatus"
        app:layout_constraintStart_toStartOf="@id/tv_launch_status"
        android:layout_marginTop="16dp"
        android:text="@string/sorting"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <RadioGroup
        android:id="@+id/radioSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_sorting"
        app:layout_constraintStart_toStartOf="@id/tv_sorting"
        android:layout_marginTop="8dp">
        <RadioButton
            android:id="@+id/btn_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ascending" />
        <RadioButton
            android:id="@+id/btn_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_apply"
        android:text="@string/apply"
        app:layout_constraintTop_toBottomOf="@id/radioSort"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textAllCaps="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>