<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_article"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/open_article"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="4dp"
        />
    <TextView
        android:id="@+id/tv_video"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/open_video"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="4dp"
        />
    <TextView
        android:id="@+id/tv_wikipedia"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/open_wikipedia"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />
</LinearLayout>